<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup"
    android:background="@drawable/splash_background2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_background" />

    <ImageView
        android:id="@+id/endfox_ground2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/newfox_ground2_down"/>

    <ImageView
        android:id="@+id/endfox_ground2up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/endfox_ground2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/newfox_ground2_up"/>

    <ImageView
        android:id="@+id/endfox"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/fox"
        app:layout_constraintBottom_toTopOf="@+id/endfox_ground2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/wordBox"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:background="@drawable/word2"
        android:contentDescription="@string/wordBox"
        app:layout_constraintBottom_toTopOf="@+id/endfox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/foxword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baekboam_normalfont"
        android:text="@string/get1"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wordBox"
        app:layout_constraintEnd_toEndOf="@+id/wordBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/wordBox"
        app:layout_constraintTop_toTopOf="@+id/wordBox"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/endfox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dx_splashfont"
        android:text="@string/getfox"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/wordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/endmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endmessage"
        android:fontFamily="@font/dx_splashfont"
        android:textAlignment="center"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/endfox_ground2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endfox"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>