<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dday_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchShowDDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dday_button"
            android:text="To D-Day" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/help_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020-08-23"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/listFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <FrameLayout
        android:id="@+id/listFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="#FF651F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    //여우 뷰

    <Button
        android:id="@+id/btnOasis"
        android:layout_width="103dp"
        android:layout_height="70dp"
        android:background="@drawable/airplane_oasis"
        android:text="\n\n\nOasis"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_ground"
        tools:layout_editor_absoluteY="531dp" />

    <ImageButton
        android:id="@+id/fox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/fox"
        android:contentDescription="@string/fox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    //여우 말풍선 관련 뷰

    <ImageView
        android:id="@+id/wordBox"
        android:layout_width="117dp"
        android:layout_height="99dp"
        android:background="@drawable/word"
        android:contentDescription="@string/wordBox"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/wordBox"
        app:layout_constraintEnd_toEndOf="@+id/wordBox"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/wordBox"
        app:layout_constraintTop_toTopOf="@+id/wordBox"
        app:layout_constraintVertical_bias="0.36" />

    //여우 애정도 관련 뷰

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="215dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/fox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listFragment"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/loveprg"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="120dp"
            android:layout_height="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/love_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/heart2"
            android:contentDescription="@string/wordBox"
            android:visibility="visible" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="15dp"
            android:text="@string/levelText"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/levelNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:text="0" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:text="0" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>